--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+    <meta name="msvalidate.01" content="E94569915B458C77B4CBF2C53426D613" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bienvenidos a DvR Solutions, Vigilancia Clara, Tecnología Completa.">
